--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
   <app-header></app-header>
   <app-heroBanner></app-heroBanner>
   <app-root></app-root>
+  <app-footer></app-footer>
 </body>
 </html>
